--- a/new file.html
+++ b/new file.html
@@ -9,6 +9,6 @@
         <h4>Heading 4</h4>
         <h5>Heading 5</h5>
         <h6>Heading 6</h6>
-        <p>This is the paragraph</p>
+        <p style="font-size: 30px;" >This is the paragraph</p>
     </body>
 </html>
