--- a/INDEX.html
+++ b/INDEX.html
@@ -6,14 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <p>qasim</p>
-    <h1>qasim</h1>
-    <h2>qasim</h2>
-    <h3>qasim</h3>
-    <h4>qasim</h4>
-    <h5>qasim</h5>
-    <h6>qasim</h6>
+    <!-- <p>qasim</p> -->
+    <!-- <h1>qasim</h1> -->
+    <!-- <h2>qasim</h2> -->
+    <!-- <h3>qasim</h3> -->
+    <!-- <h4>qasim</h4> -->
+    <!-- <h5>qasim</h5> -->
+    <!-- <h6>qasim</h6> -->
 
-    <a href="www.google.com">qasim</a>
+    <!-- <a href="http://www.google.com">qasim</a> -->
+
+    <span>this is a <strong>span</strong> tag</span>
+    <span>this is a <small>span</small> tag</span>
+    <div>this is a <em>div</em> tag</div><br><hr>
+    <div>this is a div tag</div>
+     <header></header>
+     <footer></footer>
+     <section></section>
+     <nav></nav>
 </body>
 </html>
