--- a/INDEX.html
+++ b/INDEX.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>html complete</title>
 </head>
 <body>
     <!-- <p>qasim</p> -->
@@ -16,13 +16,89 @@
 
     <!-- <a href="http://www.google.com">qasim</a> -->
 
-    <span>this is a <strong>span</strong> tag</span>
+    <!-- <span>this is a <strong>span</strong> tag</span>
     <span>this is a <small>span</small> tag</span>
     <div>this is a <em>div</em> tag</div><br><hr>
     <div>this is a div tag</div>
      <header></header>
      <footer></footer>
      <section></section>
-     <nav></nav>
+     <nav></nav> -->
+
+    <!-- list -->
+     <!-- order list -->
+      <!-- <ol>
+        <li>qasim</li>
+        <li>ahmed</li>
+        <li>najam</li>
+        <li>abdul rehman</li>
+      </ol> -->
+      <!-- unirdered list-->
+       <!-- <ul>
+        <li>qasim</li>
+        <li>ahmed</li>
+        <li>najam</li>
+        <li>abdul rehman</li>
+       </ul> -->
+       <!-- description list -->
+        <!-- <dl>
+            <dt>data</dt>
+            <dd>what is data?</dd>
+            <dt>data</dt>
+            <dd>what is data?</dd>
+            <dt>data</dt>
+            <dd>what is data?</dd>
+            <dt>data</dt>
+            <dd>what is data?</dd>
+        </dl> -->
+        <!-- table -->
+         <!-- <table> -->
+            <!-- <tr> -->
+                <!-- <th>column 1</th>
+                <th>column 2</th>
+            </tr>
+            <tr>
+                <td>row 1,col 1</td>
+                <td>row 1,col 2</td>
+            </tr>
+            <tr>
+                <td>row 2,col 1</td>
+                <td>row 2,col 2</td>
+            </tr>
+         </table> -->
+
+         <!-- forms -->
+          <!-- <form action="#">
+            <label for="username">username</label>
+            <input type="text" placeholder="enter your username" name="username" required maxlength="30">
+            <textarea name="feedback"
+             placeholder="entr your feedback"
+             rows="3" cols="40"></textarea>
+
+             <button type="reset">rsest</button>
+
+
+             <select>
+                <option value="delhi">dehli</option>
+                <option value="lahore" selected>lahore</option>
+                <option value="banglore">banglore</option>
+                <option value="mumbai">mumbai</option>
+             </select>
+
+
+
+             <label for="male">
+                <input type="radio" name="gender">
+                male
+                <label for="female">
+                    <input type="radio" name="gender">
+                </label>
+             </label>
+          </form> -->
+          <!-- multimedia -->
+           <img width="50"
+     src="img/512cc9f2ddc081105626635fe845e10a.jpg"
+      alt="logo">
+      <audio src=""></audio>
 </body>
 </html>
