--- a/image.html
+++ b/image.html
@@ -13,11 +13,26 @@
 <body>
 <img src="https://images.pexels.com/photos/16870065/pexels-photo-16870065/free-photo-of-a-pink-building-with-a-large-pink-banner-on-it.jpeg" width="400" alt="no image">
 
-<img src="./img/html learning.jpg" width="400" alt="no image">
+<img src="./img/html learnin.jpg" width="400" alt="no image">
 <picture>
+    <source media="min width: 650 pexels" srcset="./img/html learni.jpg" />
     <source media="min width: 650 pexels" srcset="./img/html learning.jpg" />
-    <source media="min width: 650 pexels" srcset="./img/html learning.jpg" />
-    <img src="./img/html learning.jpg" alt="">
+<img src="html learning.jpg" usemap="#image-map">
+<!-- an  image map generator -->
+<img src="html learning.jpg" usemap="#image-map">
+
+<map name="image-map">
+    <area target="" alt="" title="" href="" coords="144,149,157,149" shape="rect">
+</map>
+
+<script>
+    function one(){
+        alert("you clicked on one")
+    }
+    function one(){
+        alert("you clicked on tow")
+    }
+</script>
 </picture>
 </body>
 </html>
