--- a/heading.html
+++ b/heading.html
@@ -27,7 +27,7 @@
 
         </pre>
         <pre>
-            <console class="log">helo</console>
+            <console class="log">hello</console>
         </pre>
 </body>
 </html>
