--- a/image.html
+++ b/image.html
@@ -2,37 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body{
-            background-color: #414141;
-        }
-    </style>
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>image</title>
 </head>
 <body>
-<img src="https://images.pexels.com/photos/16870065/pexels-photo-16870065/free-photo-of-a-pink-building-with-a-large-pink-banner-on-it.jpeg" width="400" alt="no image">
+<img src="" alt="no image">
 
-<img src="./img/html learnin.jpg" width="400" alt="no image">
-<picture>
-    <source media="min width: 650 pexels" srcset="./img/html learni.jpg" />
-    <source media="min width: 650 pexels" srcset="./img/html learning.jpg" />
-<img src="html learning.jpg" usemap="#image-map">
-<!-- an  image map generator -->
-<img src="html learning.jpg" usemap="#image-map">
-
-<map name="image-map">
-    <area target="" alt="" title="" href="" coords="144,149,157,149" shape="rect">
-</map>
-
-<script>
-    function one(){
-        alert("you clicked on one")
-    }
-    function one(){
-        alert("you clicked on tow")
-    }
-</script>
-</picture>
 </body>
 </html>
