--- a/tables.html
+++ b/tables.html
@@ -3,36 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>image</title>
+    <title>table</title>
+    <style>
+        table{
+            border-collapse: collapse;
+        }
+        td, th{
+            border: 1px solid black;
+            padding: 10px;
+        }
+        tr:nth-child(even) {
+            background-color: #bcb9b9;
+        }
+
+        caption {
+            caption-side: bottom; /* کیپشن کو نیچے لے جانے کے لیے */
+            font-weight: bold;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
-    <table>
+    <table style="width: 100%;">
+        <colgroup>
+            <col span="2"/ style="background-color: cadetblue;">      
+        </colgroup>
         <tr>
             <th>Country</th>
             <th>Country Code</th>
             <th>Email</th>
+            <th>Number</th>
 
             <tr>
                 <td>Pakistan</td>
                 <td>Pak</td>
                 <td>Pakistan@google.com</td>
+                <td>+92</td>
             </tr>
             <tr>
                 <td>United States Of America</td>
+       
                 <td>Usa</td>
                 <td>usa@google.com</td>
+                <td>+93</td>
             </tr>
             <tr>
                 <td>Japan</td>
                 <td>JP</td>
                 <td>japan@google.com</td>
+                <td>+94</td>
             </tr>
             <tr>
                 <td>China</td>
                 <td>CN</td>
                 <td>China@google.com</td>
+                <td>+95</td>
             </tr>
         </tr>
+    </table>
+    <table style="width:100%;">
+        <colgroup>
+            <col span="2" style="background-color: aqua;" />      
+        </colgroup>
+        <tr>
+            <th>Country</th>
+            <td>china</td>
+            <td>japan</td>
+        </tr>
+        <tr>
+            <th>code</th>
+            <td>CN</td>
+            <td>JP</td>
+        </tr>
+            <th>Email</th>
+            <td>China@google.com</td>
+            <td>Japan@google.com</td>
+        </tr>
+        </tr>
+            <th>Number</th>
+            <td>+95</td>
+            <td>+94</td>
+        </tr>
+    </table>
+    <table>
+        <caption>Council Budget (in $) 2018</caption>
+            <tr>
+                <th>item</th>
+                <th>expenditure</th>
+            </tr>
+            <tr>
+                <th>Donuts</th>
+                <td>3000</td>
+            </tr>
+            <tr>
+                <th>stationery</th>
+                <td>18000</td>
+            </tr>
+            <tr>
+                <th>total</th>
+                <th>21000</th>
+            </tr>
+        
     </table>
 </body>
 </html>
