--- a/tables.html
+++ b/tables.html
@@ -7,7 +7,12 @@
     <style>
         table{
             border-collapse: collapse;
-        }
+            margin: auto; /* Table ko horizontally center karta hai */
+        border-collapse: collapse; /* Border ko ek saath dikhata hai */
+        width: 50%; /* Table ka width set karta hai */
+        text-align: center; /* Text ko center karta hai */
+    }
+            
         td, th{
             border: 1px solid black;
             padding: 10px;
