--- a/class.html
+++ b/class.html
@@ -23,6 +23,7 @@
     <table>
         <th>Test</th>
         <tr>Chai  aur code video</tr>
+        <td><iframe width="560" height="315" src="https://www.youtube.com/embed/XmLOwJHFHf0?si=kt0goieX_Lb3DMBV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
     </table>
 </body>
 </html>
