--- a/tables.html
+++ b/tables.html
@@ -22,7 +22,7 @@
         }
 
         caption {
-            caption-side: bottom; /* کیپشن کو نیچے لے جانے کے لیے */
+            caption-side: bottom; 
             font-weight: bold;
             margin-top: 10px;
         }
